# wallmod

./: .gitignore  Cargo.toml  README.md  TODO.md  add_disabled.py  build.rs  rustfmt.toml  test_anim.rs  test_grep.sh  test_limits.rs  update_gowall_tab_more.py  wallmod.desktop
.github/workflows/: ci.yml
context/: 01_introduction.md  02_goals_and_requirements.md  03_architecture_and_implementation.md  04_unique_repo_features.md  05_final_pipeline_and_features.md  06_implementation_checklist.md  07_gowall_implementation_plan.md  08_gowall_todo.md  09_gowall_feature_map.md  10_gowall_functionality_plan.md  code_render_implementation.md  image_themer.rs  silicon_features.md
gowall_src/: go.mod  go.sum
gowall_src/cmd/: extract.go  list.go  root.go
gowall_src/config/: constants.go
gowall_src/internal/api/: wallpaper.go
scripts/: parse_themes.py  update_gowall_tab.py  update_shaders.py  update_theme_opacity.py
silicon_fork/: Cargo.toml
silicon_fork/src/: lib.rs
src/: main.rs  render.rs  test_lutgen.rs  test_slider.rs  wallpaper.rs
src/app/: gowall_state.rs  helpers.rs  mod.rs  state.rs
src/backend/: bit_depth.rs  cache.rs  dither.rs  error.rs  exporter.rs  gowall_cli.rs  mod.rs  pixel_sort.rs  runtime.rs  seam_carve.rs  shader_pipeline.rs  shaders.rs
src/modules/: blur.rs  compressor.rs  extractor.rs  histogram.rs  mod.rs  photoshop.rs
src/ui/: gowall_tab.rs  header.rs  histogram.rs  icon.rs  mod.rs  sidebar.rs  stats.rs  swatches.rs  theme.rs  workspace.rs
