[package]
name = "wallmod"
version = "0.1.2"
edition = "2021"
authors = ["Antigravity <antigravity@deepmind.google>"]
description = "Wallpaper Theme Changer - A production-ready desktop Linux image customization application built with GPUI and gpui-component."

[dependencies]
chrono = "0.4.45"
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "x11", "wayland", "runtime_shaders"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
image = { version = "0.25", features = ["png", "jpeg", "gif", "webp", "bmp", "tiff", "tga", "ico", "hdr", "exr", "qoi", "pnm", "avif"] }
kmeans_colors = "0.7.1"
lutgen-palettes = "0.4.2"
oxipng = "10.1.1"
palette = "0.7.6"
rayon = "1.10"
rfd = "0.17"
tokio = { version = "1.0", features = ["full"] }
wallpaper = "3.2.0"
anyhow = "1.0.103"
lutgen = "0.15.0"

[features]
lutgen = []

[package.metadata.deb]
maintainer = "Jaber <jaberhc2002@gmail.com>"
copyright = "2026 Jaber"
depends = "$auto"
extended-description = "Wallpaper Theme Changer - A production-ready desktop Linux image customization application."
section = "utility"
priority = "optional"
assets = [
    ["target/release/wallmod", "usr/bin/", "755"],
]
